2011-08-09  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (STATUS_NOT_FOUND): Define.
	* ntea.cc (read_ea): Return correct ENOTSUP rather than EOPNOTSUPP.
	Handle STATUS_INVALID_DEVICE_REQUEST and STATUS_NOT_FOUND.  Explain
	why.  Convert conditional to switch statement.
	(write_ea): Return correct ENOTSUP rather than EOPNOTSUPP.  Handle
	STATUS_INVALID_DEVICE_REQUEST.  Convert conditional to switch statement.

2011-08-07  Corinna Vinschen  <corinna@vinschen.de>

	* resource.cc (getrlimit): Just return RLIM_INFINITY in a request for
	RLIMIT_AS.

2011-08-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (format_process_maps): Actually print info about
	the application heap of the printed process, not of the current process.

2011-08-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (socketpair): Release sb0 if there's no space left for sb1.

2011-08-03  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (clock_nanosleep): Export.
	* posix.sgml (std-notimpl): Move clock_nanosleep from here...
	(std-susv4): ... to here.
	(std-notes): Note limitations of clock_nanosleep.
	* signal.cc (clock_nanosleep): Renamed from nanosleep, adding clock_id
	and flags arguments and changing return values throughout.
	Improve checks for illegal rqtp values.  Add support for
	CLOCK_MONOTONIC and TIMER_ABSTIME.
	(nanosleep): Rewrite in terms of clock_nanosleep.
	(sleep): Ditto.
	(usleep): Ditto.
	* thread.cc: Mark clock_nanosleep in list of cancellation points.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2011-08-03  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dll_init.cc: Use fabort in favor of api_fatal and fork_info->abort
	where appropriate throughout.
	(fabort): Define.
	(dll_list::topsort): Don't print sorting information.  Fix formatting.
	(dll_list::topsort_visit): Fix formatting.
	(dll_list::load_after_fork_impl): Perform comment fixups.
	* sigproc.cc (child_info_fork::abort): (for now?) Always print cause of